client/src/assets/styles.css
/* ... */
/*  trainings page -------------------------------------------------------------- */
#trainings-options {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-radius: 10px;
    border-bottom: 5px solid black;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    width: 95vw;
    max-width: 600px;
    padding: 0 10px;
    margin-top: 90px;
}

#training-options-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 10px 0;
}

#training-options-buttons .fa-plus {
    padding-right: 5px;
}

.create-new-training {
    height: 100%;
    font-size: 18px;
}

#training-options-buttons .fa-magnifying-glass {
    padding-left: 8px;
}

.filter-trainings-button {
    font-size: 18px;
    background-color: white;
}


/* training card --------------------------------- */
.training-card {
    display: flex;
    flex-direction: column;
    min-height: 250px;
    width: 95vw;
    max-width: 600px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    margin: 15px 0;
}

.training-card-info {
    word-wrap: break-word;
}

.training-card-overview {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


.training-card-buttons {
    text-align: end;
    margin-bottom: 8px;
}

.training-card-activity {
    width: 70%;
}

.training-card-edit, .training-card-delete {
    font-size: 16px;
    font-weight: normal;
    padding: 0 5px;
    background-color: white;
}

.training-card-edit {
    color: cornflowerblue;
}

.training-card-delete {
    color: red;
}

.training-card-button-wrap {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    min-height: 80px;
}

.show-more-button-wrap {
    flex: 1;
}

.show-more-button {
    font-size: 20px;
    background-color: white;
    padding: 15px;
    color: black;
}

.show-more-button span {
    text-decoration: underline;
    padding: 0 5px;
}

.attendance-button {
    height: 35px;
    width: 100px;
    margin: 5px 10px 10px 0;
    border-radius: 5px;
    padding: 5px 10px;
    background-color: white;
    font-size: 16px;
}

.accept {
    border: 2px solid rgb(95, 190, 95);
    color: rgb(95, 190, 95);
}

.accept.active {
    background-color: rgb(95, 190, 95);
    color: white;
}

.reject {
    border: 2px solid rgb(218, 76, 76);
    color: rgb(218, 76, 76);
}

.reject.active {
    background-color: rgb(218, 76, 76);
    color: white;
}

.training-card h3,
.training-card h4 {
    padding: 4px 20px;
}

.training-card h2,
.training-card p {
    padding: 20px 20px 4px 20px;
}

.add-host-btn {
    color: cornflowerblue;
    width: 100%;
    font-size: 14px;
    padding: 10px 0;
}


/* modals --------------------------------------------------------- */
.modal-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 1;
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

.delete-modal-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 380px;
    height: 180px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    padding: 20px;
}

.delete-modal-content h3 {
    padding-bottom: 10px;
}

.delete-modal-content button {
    height: 25px;
    width: 50px;
    font-size: 16px;
    margin-top: 10px;
}

.confirm-delete {
    background-color: rgb(218, 76, 76);
    border: 2px solid rgb(218, 76, 76);
    color: white;
}

.cancel-delete {
    color: cornflowerblue;
}

.add-host-modal-content {
    width: 380px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
}

.add-host-modal-content h3 {
    padding: 15px;
}

.add-host-input {
    padding: 2px 10px;
    border: 1px solid #a9a4a4;
    border-radius: 4px;
    font-size: 16px;
    margin-bottom: 10px;
}

.confirm-add-host-btn {
    height: 30px;
    width: 60px;
    color: white;
    background-color: black;
    border-radius: 5px;
    margin: 10px;
    font-size: 14px;
}

.cancel-add-host-btn {
    color: cornflowerblue;
    font-size: 14px;
    padding-bottom: 10px;
}


/* members page ------------------------------------------*/

#coach-wrap {
    width: 92%;
    max-width: 600px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    padding: 5px;
    margin-top: 90px;
    margin-bottom: 20px;
}

#members-wrapper {
    width: 92%;
    max-width: 600px;
    background-color: white;
    border: 2px solid rgb(132, 127, 127);
    border-bottom: 7px solid black;
    border-radius: 10px;
    box-shadow: 0 0 3px rgb(160, 156, 156);
    padding: 15px;
}


/* player card small ---------------------------------------------------------------- */
.attendance-cards-wrap {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    padding: 5px;
}

.player-card-small {
    display: flex;
    align-items: center;
    flex: 1 1 50%;
}

.profile-pic-small {
    height: 45px;
    width: 45px;
    border-radius: 50%;
    border: 1px solid rgb(186, 186, 186);
    margin: 9px 4px 9px 10px;
}

.player-card-small-name {
    font-size: 18px;
    padding-left: 7px;
}

.remove-host {
    padding-left: 15px;
    cursor: pointer;
}

.empty {
    width: 100%;
    text-align: center;
    font-weight: normal;
    margin: 10px 0;
}

#profile-pic-big img, .profile-pic-small img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}
/* ... */

